--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "name": "yogapracticebuilder-server",
   "description": "Collect postures that you know and use them to build a yoga sequence",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "start": "node server.js"
+
   },
   "repository": {
     "type": "git",
