--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch --verbose  --coverage",
     "server": "nodemon server.js",
     "start": "node server.js"
   },
@@ -27,5 +27,9 @@
   "bugs": {
     "url": "https://github.com/dwindleduck/yogaPracticeBuilder-server/issues"
   },
-  "homepage": "https://github.com/dwindleduck/yogaPracticeBuilder-server#readme"
+  "homepage": "https://github.com/dwindleduck/yogaPracticeBuilder-server#readme",
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
+  }
 }
