--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.4",
+    "mongoose-paginate": "^5.0.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1"
   },
